# video_calling

./: future.txt  gemini.md  main.py  pyproject.toml  requirements.txt  server.txt  webconsole.txt
server/: database.py  main.py  users.db
static/: index.html  script.js  style.css
static/js/: auth.js  ui.js  webrtc.js
