[project]
name = "video-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.13.0",
    "fastapi>=0.117.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.36.0",
]
